--- a/glxraysim/configurematerialdialog.ui
+++ b/glxraysim/configurematerialdialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>208</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QDoubleSpinBox" name="light1AmbientRedSpinBox">
+    <widget class="QDoubleSpinBox" name="ambientRedSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -41,7 +41,7 @@
     </widget>
    </item>
    <item row="0" column="2">
-    <widget class="QDoubleSpinBox" name="light1AmbientGreenSpinBox">
+    <widget class="QDoubleSpinBox" name="ambientGreenSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -57,7 +57,7 @@
     </widget>
    </item>
    <item row="0" column="3">
-    <widget class="QDoubleSpinBox" name="light1AmbientBlueSpinBox">
+    <widget class="QDoubleSpinBox" name="ambientBlueSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -73,7 +73,7 @@
     </widget>
    </item>
    <item row="0" column="4">
-    <widget class="QDoubleSpinBox" name="light1AmbientAlphaSpinBox">
+    <widget class="QDoubleSpinBox" name="ambientAlphaSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -92,21 +92,8 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QDoubleSpinBox" name="light1DiffuseRedSpinBox">
-     <property name="decimals">
-      <number>3</number>
-     </property>
-     <property name="maximum">
-      <double>1.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>0.010000000000000</double>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="2">
-    <widget class="QDoubleSpinBox" name="light1DiffuseGreenSpinBox">
+    <widget class="QDoubleSpinBox" name="diffuseGreenSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -119,7 +106,7 @@
     </widget>
    </item>
    <item row="1" column="3">
-    <widget class="QDoubleSpinBox" name="light1DiffuseBlueSpinBox">
+    <widget class="QDoubleSpinBox" name="diffuseBlueSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -132,7 +119,7 @@
     </widget>
    </item>
    <item row="1" column="4">
-    <widget class="QDoubleSpinBox" name="light1DiffuseAlphaSpinBox">
+    <widget class="QDoubleSpinBox" name="diffuseAlphaSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -152,7 +139,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QDoubleSpinBox" name="light1SpecularRedSpinBox">
+    <widget class="QDoubleSpinBox" name="specularRedSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -165,7 +152,7 @@
     </widget>
    </item>
    <item row="2" column="2">
-    <widget class="QDoubleSpinBox" name="light1SpecularGreenSpinBox">
+    <widget class="QDoubleSpinBox" name="specularGreenSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -178,7 +165,7 @@
     </widget>
    </item>
    <item row="2" column="3">
-    <widget class="QDoubleSpinBox" name="light1SpecularBlueSpinBox">
+    <widget class="QDoubleSpinBox" name="specularBlueSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -191,7 +178,33 @@
     </widget>
    </item>
    <item row="2" column="4">
-    <widget class="QDoubleSpinBox" name="light1SpecularAlphaSpinBox">
+    <widget class="QDoubleSpinBox" name="specularAlphaSpinBox">
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="maximum">
+      <double>1.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.010000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="shininessLabel">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Shininess:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QDoubleSpinBox" name="diffuseRedSpinBox">
      <property name="decimals">
       <number>3</number>
      </property>
@@ -204,7 +217,7 @@
     </widget>
    </item>
    <item row="3" column="0">
-    <widget class="QLabel" name="shininessLabel">
+    <widget class="QLabel" name="emissionLabel">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
        <horstretch>0</horstretch>
@@ -212,7 +225,29 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Shininess:</string>
+      <string>Emission:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QDoubleSpinBox" name="emissionRedSpinBox"/>
+   </item>
+   <item row="3" column="2">
+    <widget class="QDoubleSpinBox" name="emissionGreenSpinBox"/>
+   </item>
+   <item row="3" column="3">
+    <widget class="QDoubleSpinBox" name="emissionBlueSpinBox"/>
+   </item>
+   <item row="3" column="4">
+    <widget class="QDoubleSpinBox" name="emissionAlphaSpinBox"/>
+   </item>
+   <item row="4" column="1" colspan="4">
+    <widget class="QSlider" name="shininessSlider">
+     <property name="maximum">
+      <number>128</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
