--- a/xraysim/matrixeditor/mainwindow.ui
+++ b/xraysim/matrixeditor/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>Matrix editor</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="newObjectButton">
+   <widget class="QPushButton" name="newMatrixButton">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -24,20 +24,66 @@
      </rect>
     </property>
     <property name="text">
-     <string>New object</string>
+     <string>New matrix</string>
     </property>
    </widget>
-   <widget class="QLabel" name="objectsLabel">
+   <widget class="QLabel" name="matricesLabel">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
+      <y>50</y>
       <width>55</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Objects:</string>
+     <string>Matrices:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="newVectorButton">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>10</y>
+      <width>78</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>New vector</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="matricesList">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>151</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="vectorsLabel">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>50</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Vectors:</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="vectorsList">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>70</y>
+      <width>161</width>
+      <height>192</height>
+     </rect>
     </property>
    </widget>
   </widget>
