Added GUI element and code for setting an alpha exponent (to make high- Found and fixed awesome bug: Pixel cubes were redrawn completely each update; slowed down the entire process about 10 times

--- a/glxraysim/mainwindow.ui
+++ b/glxraysim/mainwindow.ui
@@ -272,6 +272,7 @@
     <addaction name="toggleAlphaAction"/>
     <addaction name="useAlphaChannelAction"/>
     <addaction name="toggleFeaturesAction"/>
+    <addaction name="setAlphaExponentAction"/>
    </widget>
    <addaction name="fileMenu"/>
    <addaction name="extrasMenu"/>
@@ -329,6 +330,11 @@
   <action name="toggleFeaturesAction">
    <property name="text">
     <string>Toggle features</string>
+   </property>
+  </action>
+  <action name="setAlphaExponentAction">
+   <property name="text">
+    <string>Set alpha exponent</string>
    </property>
   </action>
  </widget>
